--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,7 +1,7 @@
 
 <p>
 	I'm an independent software developer with over fifteen years
-	experience. Clients find me to be <strong>competent, reliable
+	experience. Clients consistently refer to me as <strong>competent, reliable
 	and extremely easy to work with.</strong>
 </p>
 
@@ -10,15 +10,14 @@
 	made a potentially risky development process smooth and
 	rapid.”<em>&mdash; Jo Ring Giske, Enterprise Architect at Mattilsynet</em> </blockquote> </p>
 
-<p>I'm available for both small and large projects, on-site
-in the Oslo region in Norway, or remotely anywhere (with occasional on-site
-	visits). <em>I currently have available time starting January 2016.</em> </p>
+<p>I'm available for both small and large projects, on-site in the
+Oslo region in Norway, or remotely anywhere (with occasional on-site
+visits). <em>I currently have available time starting January 2016.</em> </p>
 
-<blockquote>“Thomas is a man of many talents, and a pleasure to work with. His
-    practical professionalism has helped get difficult projects back on
-    track, and both clients and colleagues have appreciated his focus on
-    options and tradeoffs when prioritizing.”
-	<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
+<blockquote>“Thomas is a man of many talents, and a pleasure to work
+    with. His practical professionalism has helped get difficult
+    projects back on track, and both clients and colleagues have
+    appreciated his focus on options and tradeoffs when prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
 
 <p>These are my specialties:</p>
 
@@ -45,8 +44,9 @@ in the Oslo region in Norway, or remotely anywhere (with occasional on-site
 <p>Finally, I also have basic skills and grounding in <strong>UI/UX
 design work, marketing, project management and entrepreneurship.</strong> However: while
 I can do supporting work in these fields myself, what you
-<em>really</em> want is to have me collaborate with a specialist in
-any of these disciplines: then we'll both really shine.
+<em>really</em> want is to have me, as a software developer,
+collaborate with a specialist in any of these disciplines: then we'll
+both really shine!
 </p>
 
 
@@ -62,7 +62,9 @@ any of these disciplines: then we'll both really shine.
 	to myself.”<em> &mdash; Ina Tegnander, project manager at Shortcut AS</em>
 </blockquote>
 
-<p><strong>We should work together!</strong> Feel free to get in touch for a friendly conversation, possibly over coffee if you are local. I'll buy. :)</p>
+<p><strong>We should work together.</strong> Feel free to get in touch
+for a friendly conversation, possibly over coffee if you are
+local. I'll buy. :)</p>
 
 	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
