--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -20,12 +20,12 @@
 
 		<div id="navbar">
 			<ul>
-				<li><a href="index.html">Services</a></li>
-				<li><a href="archive.html">Writing</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="index.html">Consulting</a></li>
+				<li><a href="archive.html">Blog</a></li>
 				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="https://no.linkedin.com/in/tknilsson">Linkedin</a></li>
 				<li><a href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">CV</a></li>
+				<li><a href="contact.html">Contact</a></li>
 
 
 				<!--
