Tweaked styling, and start pitch with problem statement

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,4 +1,17 @@
 
+<h1>Need professional software development?</h1>
+
+<p>Everyone can use help with their projects occasionally.</p>
+
+<ul>
+<li>Maybe your team lacks a certain skillset?</li>
+<li>Perhaps you need an extra set of hands on your team for a while?</li>
+<li>Or maybe you need a quick prototype built, with as little fuss as
+	possible?</li>
+</ul>
+
+<h2>I'm here to help</h2>
+
 <p>
 	I'm an independent software developer with over fifteen years
 	experience. Clients consistently refer to me as <strong>competent, reliable
@@ -62,7 +75,9 @@ both really shine!
 	to myself.”<em> &mdash; Ina Tegnander, project manager at Shortcut AS</em>
 </blockquote>
 
-<p><strong>We should work together.</strong> Feel free to get in touch
+<h2>We should work together</h2>
+
+<p>Feel free to get in touch
 for a friendly conversation, possibly over coffee if you are
 local. I'll buy. :)</p>
 
