--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -48,18 +48,18 @@ visits). <em>I currently have available time starting January 2016.</em> </p>
 <strong>
 <ul>
 	<li>Backend/server development</li>
-	<li>Project management</li>
 	<li>Devops</li>
+	<li>Project management</li>
 	<li>Mentoring and teaching</li>
 </ul>
 </strong>
 
-<p>Finally, I also have basic skills and grounding in <strong>UI/UX
-design work, marketing, project management and entrepreneurship.</strong> However: while
-I can do supporting work in these fields myself, what you
+<p>Finally, I also have basic skills in <strong>UI/UX design work,
+marketing, project management and entrepreneurship.</strong> While I
+can do some basic work in these fields myself, what you
 <em>really</em> want is to have me, as a software developer,
 collaborate with a specialist in any of these disciplines: then we'll
-both really shine!
+both really shine.
 </p>
 
 
