Tweaked based on a sales persons input :)

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,21 +1,20 @@
 
 <h1>Need professional software development?</h1>
 
-<p>Everyone can use help with their projects occasionally.</p>
+<p>Everyone needs extra help with their projects occasionally.</p>
 
 <ul>
-<li>Maybe your team lacks a certain skillset?</li>
-<li>Perhaps you need an extra set of hands on your team for a while?</li>
-<li>Or maybe you need a quick prototype built, with as little fuss as
-	possible?</li>
+<li>Too much to do right now? Need an extra set of hands on your team?</li>
+<li>Hiring in new areas takes time. Does your team lack a certain skillset today?</li>
+<li>Do you need a quick prototype built ASAP, with as little fuss as possible?</li>
 </ul>
 
 <h2>I'm here to help</h2>
 
 <p>
 	I'm an independent software developer with over fifteen years
-	experience. Clients consistently refer to me as <strong>competent, reliable
-	and extremely easy to work with.</strong>
+	experience. Clients consistently refer to me as <strong>competent,
+	versatile, reliable and extremely easy to work with.</strong>
 </p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
@@ -32,7 +31,7 @@ visits). <em>I currently have available time starting January 2016.</em> </p>
     projects back on track, and both clients and colleagues have
     appreciated his focus on options and tradeoffs when prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
 
-<p>These are my specialties:</p>
+<p>Expert fields:</p>
 
 <strong>
 <ul>
@@ -77,10 +76,8 @@ both really shine.
 
 <h2>We should work together</h2>
 
-<p>Feel free to get in touch
-for a friendly conversation, possibly over coffee if you are
-local. I'll buy. :)</p>
+<p>Feel free to get in touch for an informal chat.</p>
 
-	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
+<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
-	<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">Download CV (pdf)</a></strong></p>
+<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">Download CV (pdf)</a></strong></p>
