Cv as pdf, and hop via web page to get analytics

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,12 +1,12 @@
 
 <h1>Need professional software development?</h1>
 
-<p>Everyone needs extra help with their projects occasionally.</p>
+<p>Everyone needs a bit of extra help with their projects occasionally.</p>
 
 <ul>
-<li>Too much to do right now? Need an extra set of hands on your team?</li>
-<li>Hiring in new areas takes time. Does your team lack a certain skillset today?</li>
-<li>Do you need a quick prototype built ASAP, with as little fuss as possible?</li>
+	<li>Too much to do right now? Need an extra set of hands on your team?</li>
+	<li>Hiring and training in new areas takes time. Does your team lack a certain skillset today?</li>
+	<li>Do you need a quick prototype built ASAP, with as little fuss as possible?</li>
 </ul>
 
 <h2>I'm here to help</h2>
@@ -22,43 +22,41 @@
 	made a potentially risky development process smooth and
 	rapid.”<em>&mdash; Jo Ring Giske, Enterprise Architect at Mattilsynet</em> </blockquote> </p>
 
-<p>I'm available for both small and large projects, on-site in the
-Oslo region in Norway, or remotely anywhere (with occasional on-site
-visits). <em>I currently have available time starting January 2016.</em> </p>
+<p>I'm available for both small and large projects, on-site in Oslo,
+	or remotely anywhere (with occasional on-site visits). <em>I currently
+	have available time starting January 2016.</em> </p>
 
 <blockquote>“Thomas is a man of many talents, and a pleasure to work
-    with. His practical professionalism has helped get difficult
-    projects back on track, and both clients and colleagues have
-    appreciated his focus on options and tradeoffs when prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
+	with. His practical professionalism has helped get difficult
+	projects back on track, and both clients and colleagues have
+	appreciated his focus on options and tradeoffs when prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
 
 <p>Expert fields:</p>
 
 <strong>
-<ul>
-	<li>Web development</li>
-	<li>Android development</li>
-	<li>System architecture</li>
-	<li>Java, JavaScript and Ruby programming</li>
-</ul>
+	<ul>
+		<li>Web development</li>
+		<li>Android development</li>
+		<li>System architecture</li>
+		<li>Java, JavaScript and Ruby programming</li>
+	</ul>
 </strong>
 
 <p>I also have broad, solid experience in:</p>
 
 <strong>
-<ul>
-	<li>Backend/server development</li>
-	<li>Devops</li>
-	<li>Project management</li>
-	<li>Mentoring and teaching</li>
-</ul>
+	<ul>
+		<li>Backend/server development</li>
+		<li>Devops</li>
+		<li>Mentoring and teaching</li>
+	</ul>
 </strong>
 
 <p>Finally, I also have basic skills in <strong>UI/UX design work,
-marketing, project management and entrepreneurship.</strong> While I
-can do some basic work in these fields myself, what you
-<em>really</em> want is to have me, as a software developer,
-collaborate with a specialist in any of these disciplines: then we'll
-both really shine.
+	marketing, and project management.</strong> While I
+	can do basic work in these fields myself, what you <em>really</em> want
+	is to have me, as a software developer, collaborate with specialists
+	in any of these disciplines: then we'll both truly shine.
 </p>
 
 
@@ -80,4 +78,4 @@ both really shine.
 
 <p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
-<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">Download CV (pdf)</a></strong></p>
+<p><strong><a id="cv-download-link" href="cv.html">Download CV (pdf)</a></strong></p>
