Fix styling, add selected projects section to landing page

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -59,6 +59,30 @@
 	in any of these disciplines: then we'll both truly shine.
 </p>
 
+<h2>Selected projects</h2>
+
+<h3>NSB Underholdning</h3>
+
+<p>A high-profile app that the Norwegian State Railways (NSB) provides
+to its customers. For users with recent train tickets, the app
+provides free audio books, podcasts, music and more. As part of the
+Shortcut team building this, I ironed out the system architecture of
+the project and developed the initial Android version of the
+app. Though faced with a challenging deadline, the project shipped
+on-time, and is used daily by thousands of commuters.
+</p>
+
+<h3>NAF Bilen Min</h3>
+
+<p>This app is part of a major effort on part of the Norwegian
+Automobile Federation (NAF) to create new, rich digital services for
+their customers. As part of the Shortcut team building this, I worked
+on system architecture, some Android development, web frontend,
+backend/integration development, and mentoring of junior project
+members. The project shipped on time, on budget and had multiple tens
+of thousands of users as of Q3 2015.
+</p>
+
 
 <blockquote>“[Thomas] is smart, very dedicated, structured
 	and quality conscious. I have been blessed to have him
