--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -29,7 +29,8 @@
 <blockquote>“Thomas is a man of many talents, and a pleasure to work
 	with. His practical professionalism has helped get difficult
 	projects back on track, and both clients and colleagues have
-	appreciated his focus on options and tradeoffs when prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
+	appreciated his focus on options and tradeoffs when
+	prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
 
 <p>Expert fields:</p>
 
@@ -53,7 +54,7 @@
 </strong>
 
 <p>Finally, I also have basic skills in <strong>UI/UX design work,
-	marketing, and project management.</strong> While I
+	marketing, product development and project management.</strong> While I
 	can do basic work in these fields myself, what you <em>really</em> want
 	is to have me, as a software developer, collaborate with specialists
 	in any of these disciplines: then we'll both truly shine.
