Just shuffle the order a bit

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -22,16 +22,6 @@
 	made a potentially risky development process smooth and
 	rapid.”<em>&mdash; Jo Ring Giske, Enterprise Architect at Mattilsynet</em> </blockquote> </p>
 
-<p>I'm available for both small and large projects, on-site in Oslo,
-	or remotely anywhere (with occasional on-site visits). <em>I currently
-	have available time starting January 2016.</em> </p>
-
-<blockquote>“Thomas is a man of many talents, and a pleasure to work
-	with. His practical professionalism has helped get difficult
-	projects back on track, and both clients and colleagues have
-	appreciated his focus on options and tradeoffs when
-	prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
-
 <p>Expert fields:</p>
 
 <strong>
@@ -59,6 +49,14 @@
 	is to have me, as a software developer, collaborate with specialists
 	in any of these disciplines: then we'll both truly shine.
 </p>
+
+
+<p><blockquote>“Thomas is a man of many talents, and a pleasure to work
+	with. His practical professionalism has helped get difficult
+	projects back on track, and both clients and colleagues have
+	appreciated his focus on options and tradeoffs when
+	prioritizing.”<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote></p>
+
 
 <h2>Selected projects</h2>
 
@@ -102,5 +100,9 @@ of thousands of users as of Q3 2015.
 <p>Feel free to get in touch for an informal chat.</p>
 
 <p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
+
+<p>I'm available for both small and large projects, on-site in Oslo,
+or remotely anywhere (with occasional on-site visits). <em>I currently
+have available time starting January 2016.</em> </p>
 
 <p><strong><a id="cv-download-link" href="cv.html">Download CV (pdf)</a></strong></p>
