Facebook meta descr, add sass processing

--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		<meta name="description" content="Freelance software developer with over fifteen years
 						  experience. Clients consider me competent, reliable
-						  and extremely easy to work with. Get in touch!">
+						  and extremely easy to work with. Get in touch!" />
+		<meta name="og:description" content="Freelance software developer with over fifteen years
+						  experience. Clients consider me competent, reliable
+						  and extremely easy to work with. Get in touch!" />
 		<meta property="og:url" content="http://tknilsson.com/index.html" />
-		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
-		<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0" />
+		<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png" />
 		<title>Thomas Kjeldahl Nilsson</title>
 	</head>
 
