--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<div id="head">
-			<h1>Thomas Kjeldahl Nilsson</h1>
+			<h1 id="nameHeader">Thomas Kjeldahl Nilsson</h1>
 		</div>
 
 		<div id="navbar">
