--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -101,8 +101,8 @@ of thousands of users as of Q3 2015.
 
 <p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
-<p>I'm available for both small and large projects, on-site in Oslo,
-or remotely anywhere (with occasional on-site visits). <em>I currently
+<p>Available for both small and large projects: on-site in Oslo, or
+remote anywhere (with occasional on-site visits). <em>I currently
 have available time starting January 2016.</em> </p>
 
 <p><strong><a id="cv-download-link" href="cv.html">Download CV (pdf)</a></strong></p>
