--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -6,14 +6,15 @@
 <ul>
 	<li>Too much to do right now? Need an extra set of hands on your team?</li>
 	<li>Hiring and training in new areas takes time. Does your team lack a certain skillset today?</li>
+	<li>Struggling with your software development project? Need some independent, objective advice?</li>
 	<li>Do you need a quick prototype built ASAP, with as little fuss as possible?</li>
 </ul>
 
-<h2>I'm here to help</h2>
+<h2>I can help you</h2>
 
 <p>
-	I'm an independent software developer with over fifteen years
-	experience. Clients consistently refer to me as <strong>competent,
+	I'm an independent software developer and consultant with over
+	fifteen years experience. Clients consistently refer to me as <strong>competent,
 	versatile, reliable and extremely easy to work with.</strong>
 </p>
 
@@ -33,7 +34,7 @@
 	</ul>
 </strong>
 
-<p>I also have broad, solid experience in:</p>
+<p>Broad, solid experience in:</p>
 
 <strong>
 	<ul>
