--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -17,6 +17,11 @@
 	</head>
 
 	<body>
+		<style>
+
+		</style>
+
+
 		<div id="head">
 			<h1 id="nameHeader">Thomas Kjeldahl Nilsson</h1>
 		</div>
@@ -28,8 +33,7 @@
 				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="https://no.linkedin.com/in/tknilsson">Linkedin</a></li>
 				<li><a href="cv.html">CV</a></li>
-				<li><a href="contact.html">Contact</a></li>
-
+				<li><a href="contact.html">Contact me</a></li>
 
 				<!--
 				<li><a href="index.html">Blog</a></li>
@@ -37,9 +41,6 @@
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
 				-->
-
-
-
 			</ul>
 		</div>
 
