Add portrait to landing page

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -12,6 +12,8 @@
 
 <h2>I can help you</h2>
 
+<img class="left headshot" src="/images/isee_portrait_henley_small.png"/>
+
 <p>
 	I'm an independent software developer and consultant with over
 	fifteen years experience. Clients consistently refer to me as <strong>competent,
