Shift portrait to right

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -12,7 +12,7 @@
 
 <h2>I can help you</h2>
 
-<img class="left headshot" src="/images/isee_portrait_henley_small.png"/>
+<img class="right headshot" src="/images/isee_portrait_henley_small.png"/>
 
 <p>
 	I'm an independent software developer and consultant with over
