Add Jonas testimonial

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -74,6 +74,21 @@ app. Though faced with a challenging deadline, the project shipped
 on-time, and is used daily by thousands of commuters.
 </p>
 
+<blockquote>“[Thomas] is smart, very dedicated, structured
+	and quality conscious. I have been blessed to have him
+	on several of my projects, where he always helped me
+	stay one step ahead and predict future
+	risks. [&hellip;] He possesses excellent
+	communications skills and is very patient and pleasant
+	to work with. On top of that he is very considerate,
+	kind and honest. I give Thomas my very best
+	recommendations, even though I would like to keep him
+	to myself.”<em> &mdash; Ina Tegnander, Project Manager at Shortcut AS</em>
+</blockquote>
+
+
+
+
 <h3>NAF Bilen Min</h3>
 
 <p>This app is part of a major effort on part of the Norwegian
@@ -86,17 +101,16 @@ of thousands of users as of Q3 2015.
 </p>
 
 
-<blockquote>“[Thomas] is smart, very dedicated, structured
-	and quality conscious. I have been blessed to have him
-	on several of my projects, where he always helped me
-	stay one step ahead and predict future
-	risks. [&hellip;] He possesses excellent
-	communications skills and is very patient and pleasant
-	to work with. On top of that he is very considerate,
-	kind and honest. I give Thomas my very best
-	recommendations, even though I would like to keep him
-	to myself.”<em> &mdash; Ina Tegnander, project manager at Shortcut AS</em>
+<blockquote>“Thomas was a great asset to the team with his calm, friendly and
+professional manner combined with his broad knowledge and
+expertise. One of the things I liked best about working with Thomas
+was his pedagogical ways of explaining complex technical problems. I
+could always count on Thomas getting the job done and I warmly
+recommend him.”<em> &mdash; Jonas Dalsenius, Project Manager at the Norwegian Automobile Federation (NAF)</em>
 </blockquote>
+
+
+
 
 <h2>We should work together</h2>
 
