--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -29,8 +29,8 @@
 
 <strong>
 	<ul>
-		<li>Web development</li>
 		<li>Android development</li>
+		<li>Web development</li>
 		<li>System architecture</li>
 		<li>Java, JavaScript and Ruby programming</li>
 	</ul>
@@ -43,11 +43,12 @@
 		<li>Backend/server development</li>
 		<li>Devops</li>
 		<li>Mentoring and teaching</li>
+		<li>Project management</li>
 	</ul>
 </strong>
 
 <p>Finally, I also have basic skills in <strong>UI/UX design work,
-	marketing, product development and project management.</strong> While I
+	marketing and product development.</strong> While I
 	can do basic work in these fields myself, what you <em>really</em> want
 	is to have me, as a software developer, collaborate with specialists
 	in any of these disciplines: then we'll both truly shine.
