--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -17,7 +17,7 @@
 <p>
 	I'm an independent software developer and consultant with over
 	fifteen years experience. Clients consistently refer to me as <strong>competent,
-	versatile, reliable and extremely easy to work with.</strong>
+	versatile, reliable</strong> and <strong>extremely easy to work with.</strong>
 </p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
@@ -43,11 +43,10 @@
 		<li>Backend/server development</li>
 		<li>Devops</li>
 		<li>Mentoring and teaching</li>
-		<li>Project management</li>
 	</ul>
 </strong>
 
-<p>Finally, I also have basic skills in <strong>UI/UX design work,
+<p>Finally, I also have basic skills in <strong>project management, UI/UX design work,
 	marketing and product development.</strong> While I
 	can do basic work in these fields myself, what you <em>really</em> want
 	is to have me, as a software developer, collaborate with specialists
@@ -68,11 +67,14 @@
 
 <p>A high-profile app that the Norwegian State Railways (NSB) provides
 to its customers. For users with recent train tickets, the app
-provides free audio books, podcasts, music and more. As part of the
-Shortcut team building this, I ironed out the system architecture of
-the project and developed the initial Android version of the
-app. Though faced with a challenging deadline, the project shipped
-on-time, and is used daily by thousands of commuters.
+	provides free audio books, podcasts, music and more.</p>
+
+<p>As part of the Shortcut team building this, I ironed out the system
+architecture of the project and developed the initial Android version
+	of the app.</p>
+
+<p>Though faced with a challenging deadline, the project shipped on-time,
+and is used daily by thousands of commuters.
 </p>
 
 <blockquote>“[Thomas] is smart, very dedicated, structured
@@ -94,11 +96,15 @@ on-time, and is used daily by thousands of commuters.
 
 <p>This app is part of a major effort on part of the Norwegian
 Automobile Federation (NAF) to create new, rich digital services for
-their customers. As part of the Shortcut team building this, I worked
-on system architecture, some Android development, web frontend,
+	their customers.</p>
+
+<p>As part of the Shortcut team building this, I worked on system
+architecture, some Android development, web frontend,
 backend/integration development, and mentoring of junior project
-members. The project shipped on time, on budget and had multiple tens
-of thousands of users as of Q3 2015.
+	members.</p>
+
+<p>The project shipped on time, on budget and had multiple tens of
+thousands of users as of Q3 2015.
 </p>
 
 
