Remove avail jan 2016 clause

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -126,7 +126,10 @@ recommend him.”<em> &mdash; Jonas Dalsenius, Project Manager at the Norwegian 
 <p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
 <p>Available for both small and large projects: on-site in Oslo, or
-remote anywhere (with occasional on-site visits). <em>I currently
-have available time starting January 2016.</em> </p>
+	remote anywhere (with occasional on-site visits).
+
+	<!-- <em>I currently
+	have available time starting January 2016.</em> -->
+</p>
 
 <p><strong><a id="cv-download-link" href="cv.html">Download CV (pdf)</a></strong></p>
