--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -49,7 +49,7 @@
 		</div>
 
 		<div id="foot">
-			<!-- 	&copy; 2015 Thomas Kjeldahl Nilsson  -->
+			&copy; TKNilsson Software AS &mdash; Organisasjonsnummer 916 569 726
 		</div>
 
 		<script type="text/javascript">
