--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -32,7 +32,7 @@
 				<li><a href="archive.html">Blog</a></li>
 				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="https://no.linkedin.com/in/tknilsson">Linkedin</a></li>
-				<li><a href="cv.html">CV</a></li>
+				<li><a href="https://www.visualcv.com/thomas-kjeldahl-nilsson">CV</a></li>
 				<li><a href="contact.html">Contact me</a></li>
 
 				<!--
