--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -128,8 +128,8 @@ recommend him.”<em> &mdash; Jonas Dalsenius, Project Manager at the Norwegian 
 <p>Available for both small and large projects: on-site in Oslo, or
 	remote anywhere (with occasional on-site visits).
 
-	<!-- <em>I currently
-	have available time starting January 2016.</em> -->
+ <em>I currently
+	have available time starting January 2018.</em>
 </p>
 
-<p><strong><a id="cv-download-link" href="cv.html">Download CV (pdf)</a></strong></p>
+<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson">Download CV (pdf)</a></strong></p>
