--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -30,9 +30,8 @@
 <strong>
 	<ul>
 		<li>Android development</li>
-		<li>Web development</li>
 		<li>System architecture</li>
-		<li>Java, JavaScript and Ruby programming</li>
+		<li>Java, Kotlin, JavaScript and Ruby programming</li>
 	</ul>
 </strong>
 
@@ -40,8 +39,8 @@
 
 <strong>
 	<ul>
+		<li>Web development</li>
 		<li>Backend/server development</li>
-		<li>Devops</li>
 		<li>Mentoring and teaching</li>
 	</ul>
 </strong>
